# PriceRadar

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  requests.http
app/: auth.py  bootstrap.py  cli.py  config.py  database.py  demo.py  main.py  migrations.py  models.py  refresh.py  repositories.py  services.py  worker.py
app/static/: app.js  index.html
docs/: EX3-notes.md
docs/runbooks/: compose.md
migrations/: 001_initial_schema.sql  002_alerting_and_refresh_fields.sql
scripts/: __init__.py  migrate.py  refresh.py  seed_products.py
tests/: conftest.py  test_auth.py  test_cli.py  test_main.py  test_refresh.py
